# Datadog-APM-Setups

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  app.js  composer.json  datadog-setup.php  docker-compose.yaml  index.html  package-lock.json  package.json  test-traces.sh
.github/workflows/: versioning.yaml
app/: DatadogTraces.php  Dockerfile  datadog-setup.php  index.php  trace-test.php
app/App/Middleware/: DatadogMiddleware.php
app/Http/Controllers/: ApiController.php
app/Http/Middleware/: DatadogTracingMiddleware.php
bootstrap/: app.php
include/: trace_wrapper.h
public/: index.html
resources/views/: welcome.blade.php
routes/: api.php  web.php
src/: main.c  trace_wrapper.cpp
